# missile_motion

./: CMakeLists.txt  README.md  main.cpp
core/: Core.cpp  Core.hpp
datafiles/: formatter.py  missile.txt  shot.txt
datafiles/interpolation/: axial_dumping_moment.txt
datafiles/parameters/: launch.txt  missile.txt
datafiles/polynoms/: C_x.txt  K_nm.txt
global/: FunctionCreator.cpp  GlobalScope.cpp  GlobalScope.hpp
missile_motion/modeling/: AbstractSolver.hpp
missile_motion/system/: MissileSystem.cpp  MissileSystem.hpp  Parameters.hpp
utils/: Vector.cpp
utils/Function/physics/: VirtualTemperature.cpp  VirtualTemperature.hpp
utils/Function/polynom/: ConditionalPolynom.hpp
utils/file_input/: ParametersInputter.cpp  ParametersInputter.hpp  filenames.hpp
visualize/: trajectory.py  trasse.py  visualize.py
